lldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    lldap: https://github.com/nitnelave/lldap
    k8s: https://github.com/Evantage-WS/lldap-kubernetes
    ocp: https://github.com/mterry/lldap-openshift
  labels:
    app: $LLDAP_NAME
  name: $LLDAP_NAME
  namespace: $LLDAP_NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $LLDAP_NAME
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        lldap: https://github.com/nitnelave/lldap
        k8s: https://github.com/Evantage-WS/lldap-kubernetes
        ocp: https://github.com/mterry/lldap-openshift
      labels:
        app: $LLDAP_NAME
    spec:
      containers:
        - env: 
            - name: GID
              value: "10001"
            - name: LLDAP_JWT_SECRET
              valueFrom:
                secretKeyRef:
                  name: $LLDAP_NAME-credentials
                  key: lldap-jwt-secret
            - name: LLDAP_LDAP_BASE_DN
              valueFrom:
                secretKeyRef:
                  name: $LLDAP_NAME-credentials
                  key: base-dn
            - name: LLDAP_LDAP_USER_PASS
              valueFrom:
                secretKeyRef:
                  name: $LLDAP_NAME-credentials
                  key: lldap-ldap-user-pass
            - name: UID
              value: "10001"
            - name: LLDAP_VERBOSE
              valueFrom:
                configMapKeyRef:
                  name: $LLDAP_NAME-config
                  key: lldap-verbose
          image: nitnelave/lldap:latest-alpine-rootless
          name: $LLDAP_NAME
          ports:
            - containerPort: $LLDAP_LDAP_PORT 
            - containerPort: $LLDAP_ADMIN_PORT
          volumeMounts:
            - mountPath: /data
              name: $LLDAP_NAME-data
      restartPolicy: Always
      volumes:
        - name: $LLDAP_NAME-data
          persistentVolumeClaim:
            claimName: $LLDAP_NAME-data
